Fix padding on small screens.

--- a/publish/css/styles.css
+++ b/publish/css/styles.css
@@ -157,12 +157,12 @@ a:link, a:visited, a:hover {
 	}
 
 	#content .flex-item {
-		padding: 70px 50px 50px 50px;
+		padding: 0 50px 50px 50px;
 	}
 
 	#content .flex-container:nth-child(odd) .flex-item:nth-of-type(1),
 	#content .flex-container:nth-child(even) .flex-item:nth-of-type(2) {
-		padding-bottom: 0;
+		padding-top: 70px;
 	}
 
 	#content img {
